# rasa_nlu

./: .travis.yml  setup.cfg  setup.py
alt_requirements/: requirements_dev.txt
rasa_nlu/: components.py  data_router.py  evaluate.py  project.py  server.py
rasa_nlu/classifiers/: sklearn_intent_classifier.py
rasa_nlu/emulators/: __init__.py  dialogflow.py  luis.py
rasa_nlu/extractors/: crf_entity_extractor.py  entity_synonyms.py
rasa_nlu/featurizers/: ngram_featurizer.py
rasa_nlu/training_data/: training_data.py  util.py
rasa_nlu/training_data/formats/: __init__.py  dialogflow.py  luis.py  markdown.py  rasa.py  wit.py
rasa_nlu/utils/: spacy_utils.py
tests/base/: test_emulators.py  test_featurizers.py  test_interpreter.py  test_multitenancy.py  test_persistor.py  test_project.py  test_server.py  test_tokenizers.py  test_training_data.py  test_utils.py
tests/training/: test_train.py
