# pytest pycodestyle configuration
[tool:pytest]
codestyle_max_line_length = 80
codestyle_ignore =
    E251
    E126
    W504
codestyle_exclude =
    docs/conf.py

# ignoring W503: line break occurred before a binary operator
# ignoring E126: continuation line over-indented for hanging indent

[metadata]
description-file = README.md
license_file = LICENSE.txt

[bdist_wheel]
# this will create a universal wheel for all distributions and py2 & py3
universal=1
